# caldir

./: .gitignore  .gitmodules  AGENTS.md  BASES_IDEA.md  BASE_MIGRATION_PLAN.md  CLAUDE.md  Cargo.toml  FEEDBACK.md  LICENSE  README.md  justfile
caldir-cli/: CLAUDE.md  Cargo.toml
caldir-cli/src/: caldir.rs  calendar.rs  client.rs  config.rs  diff.rs  diff_new.rs  local.rs  local_event.rs  main.rs  output.rs  provider.rs  remote.rs  render.rs  sync.rs  test_utils.rs
caldir-cli/src/commands/: agenda_view.rs  auth.rs  config.rs  connect.rs  discard.rs  doctor.rs  events.rs  guards.rs  invites.rs  mod.rs  new.rs  pull.rs  pull_old.rs  push.rs  push_old.rs  rsvp.rs  status.rs  status2.rs  sync.rs  today.rs  update.rs  week.rs
caldir-cli/src/commands/doctor/: doctor_warning.rs  event_warning.rs  (+1 more)
caldir-cli/src/diff/: calendar_diff.rs  diff_kind.rs  event_diff.rs
caldir-cli/src/ics/: generate.rs  mod.rs  parse.rs
caldir-cli/src/local/: config.rs  mod.rs  state.rs
caldir-cli/src/render/: diff.rs  event.rs  events_in_range.rs  json_event.rs  json_events_in_range.rs  time.rs
caldir-cli/src/store/: create.rs  delete.rs  list.rs  mod.rs  update.rs
caldir-cli/src/utils/: connections.rs  date.rs  guards.rs  mod.rs  path.rs  require_calendars.rs  resolve_calendars.rs  sync_range.rs  tui.rs
caldir-core/: AGENTS.md  CLAUDE.md  Cargo.toml
caldir-core/src/: caldir.rs  caldir_builder.rs  caldir_config.rs  caldir_environment.rs  caldir_settings.rs  calendar.rs  calendar_config.rs  calendar_event.rs  calendar_state.rs  connected_calendar.rs  connection.rs  constants.rs  date_range.rs  diff.rs  error.rs  event.rs  event_time.rs  lib.rs  local_event.rs  paths.rs  protocol.rs  provider.rs  provider_account.rs  recurrence.rs  remote.rs  rpc.rs  test_utils.rs  transport.rs  utils.rs
caldir-core/src/caldir/: config.rs  error.rs
caldir-core/src/calendar/: cache.rs  calendar_event.rs  config.rs  error.rs  event.rs  events.rs  group.rs  mod.rs  path.rs  state.rs  test_support.rs
caldir-core/src/config/: calendar_config.rs  global.rs  local.rs  mod.rs
caldir-core/src/connection/: error.rs
caldir-core/src/diff/: batch_diff.rs  calendar_diff.rs  diff_kind.rs  event_change.rs  event_diff.rs  versioned_event.rs
caldir-core/src/event/: attachment.rs  attendee.rs  availability.rs  class.rs  error.rs  from_icalendar.rs  instance_id.rs  occurrences.rs  organizer.rs  recurrence.rs  reminder.rs  slugify.rs  status.rs  time.rs  to_icalendar.rs  transparency.rs  tz_normalize.rs  visibility.rs  windows_tz.rs  x_property.rs
caldir-core/src/ics/: generate.rs  mod.rs  parse.rs  windows_tz.rs
caldir-core/src/local/: event.rs  mod.rs  state.rs
caldir-core/src/provider/: account.rs  command.rs  error.rs  handler.rs  mock_provider.rs  protocol.rs  registry.rs  slug.rs  storage.rs  transport.rs
caldir-core/src/remote/: config.rs  error.rs  event.rs  mod.rs  protocol.rs  provider.rs  provider_account.rs  provider_registry.rs  remote.rs
caldir-core/src/rpc/: connect.rs  create_event.rs  delete_event.rs  handler.rs  list_calendars.rs  list_events.rs  update_event.rs
caldir-core/src/sync/: batch_diff.rs  calendar_diff.rs  event_diff.rs  mod.rs
caldir-core/src/transport/: error.rs  subprocess.rs  subprocess_transport.rs
caldir-core/src/utils/: date_bounds.rs  date_range.rs  paths.rs  slugify.rs  tilde_expansion.rs
caldir-lib/: Cargo.toml
caldir-lib/src/: caldir.rs  calendar.rs  event.rs
caldir-lib/src/diff/: batch_diff.rs  diff_kind.rs  event_diff.rs  mod.rs
caldir-lib/src/ics/: parse.rs
caldir-notify/: CLAUDE.md  Cargo.toml  README.md
caldir-notify/src/: check.rs  main.rs  notify.rs
caldir-notify/src/install/: launchd.rs  mod.rs  systemd.rs
caldir-provider-google/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
caldir-provider-google/src/: app_config.rs  config.rs  constants.rs  google.rs  google_auth.rs  main.rs  remote_config.rs  session.rs  session_old.rs  types.rs
caldir-provider-google/src/commands/: auth_init.rs  auth_submit.rs  authenticate.rs  connect.rs  create_event.rs  delete_event.rs  invite.rs  list_calendars.rs  list_events.rs  mod.rs  setup_submit.rs  update_event.rs
caldir-provider-google/src/convert/: from_google.rs  mod.rs  to_google.rs
caldir-provider-google/src/google/: actions.rs  api.rs  from_google.rs  index.rs  mod.rs  to_google.rs
caldir-provider-google/src/google_event/: from_google.rs  mod.rs  to_google.rs
caldir-provider-google/src/parser/: from_google.rs  mod.rs  to_google.rs
caldir-provider-google/src/session/: store.rs  types.rs
caldir-provider-google/src/transformer/: to_google.rs
caldir-provider-icloud/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
caldir-provider-icloud/src/: caldav.rs  constants.rs  main.rs  remote_config.rs  session.rs
caldir-provider-icloud/src/commands/: auth_init.rs  auth_submit.rs  connect.rs  create_event.rs  delete_event.rs  list_calendars.rs  list_events.rs  update_event.rs
caldir-provider-icloud/src/session/: store.rs  types.rs
caldir-provider-outlook/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  recurring-event-override.fix.md
caldir-provider-outlook/docs/: graph-api.md
caldir-provider-outlook/src/: app_config.rs  constants.rs  graph_client.rs  graph_types.rs  main.rs  remote_config.rs  session.rs
caldir-provider-outlook/src/commands/: connect.rs  create_event.rs  delete_event.rs  list_calendars.rs  list_events.rs  update_event.rs
caldir-provider-outlook/src/graph_api/: client.rs  types.rs
caldir-provider-outlook/src/outlook_event/: from_outlook.rs  mod.rs  to_outlook.rs
caldir-provider-outlook/src/session/: store.rs  types.rs
caldir-provider-webcal/: CLAUDE.md  Cargo.toml  README.md
caldir-provider-webcal/src/: constants.rs  http.rs  main.rs  remote_config.rs  session.rs
caldir-provider-webcal/src/commands/: connect.rs  create_event.rs  delete_event.rs  list_calendars.rs  list_events.rs  mod.rs  update_event.rs
caldir-server/: CLAUDE.md  Cargo.toml
caldir-server/src/: main.rs  singleton.rs  state.rs
caldir-server/src/routes/: auth.rs  calendars.rs  mod.rs  remote.rs
(+159 files in other folders)
