[package]
name = "caldir-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for interacting with your local caldir directory and syncing with external calendar providers"

[workspace]
members = [".", "caldir-provider-google"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# .ics parsing/generation
icalendar = "0.16"

# Error handling
anyhow = "1"

# Filesystem paths
dirs = "5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Provider discovery (finding binaries in PATH)
which = "7"
