[workspace]
members = ["caldir-cli", "caldir-core", "caldir-provider-caldav", "caldir-provider-google", "caldir-provider-icloud", "caldir-provider-outlook", "caldir-provider-webcal"]
resolver = "3"

[workspace.package]
license = "MIT"
repository = "https://github.com/t4t5/caldir"
homepage = "https://caldir.org"
