[package]
name = "caldir-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for interacting with your local caldir directory and syncing with external calendar providers"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Core library (for types only in thin client mode)
caldir-lib = { path = "../caldir-lib" }

# Date/time (for new command)
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Colored output
owo-colors = "4"

# Terminal spinners
indicatif = "0.17"
