[package]
name = "caldir-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for interacting with your local caldir directory and syncing with external calendar providers"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Core library
caldir-core = { path = "../caldir-core" }

# Colored output
owo-colors = "4"

# Terminal spinners
indicatif = "0.17"
