[package]
name = "caldir-cli"
version = "0.2.0"
edition = "2024"
description = "CLI for interacting with your local caldir directory and syncing with external calendar providers"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["calendar", "cli", "ics", "sync"]
categories = ["command-line-utilities"]

[[bin]]
name = "caldir"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Core library
caldir-core = { path = "../caldir-core", version = "0.2.0" }

# Colored output
owo-colors = "4"

# Terminal spinners
indicatif = "0.18.3"

# Open URLs in browser
open = "5"

# URL parsing
url = "2"

# Secure password prompting
rpassword = "7"

# Interactive prompts
dialoguer = "0.12"

# Self-update
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
flate2 = "1"
tar = "0.4"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
