[package]
name = "caldir-core"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
chrono = "0.4.42"
chrono-tz = "0.10.4"
home = "0.5.12"
icalendar = "0.17.10"
serde = { version = "1", features = ["derive"] }
slug = "0.1.6"
thiserror = "2.0.18"
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
