[package]
name = "caldir-core"
version = "0.9.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = "0.4.42"
chrono-tz = "0.10.4"
dirs = "6.0.0"
home = "0.5.12"
humantime = "2.3.0"
icalendar = "0.17.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slug = "0.1.6"
thiserror = "2.0.18"
tokio = { version = "1", features = ["process", "io-util", "time", "macros", "rt"] }
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1"
serial_test = "3"
tempfile = "3"
