[package]
name = "caldir-core"
version = "0.11.1"
edition = "2024"
description = "Core library for caldir calendar storage, sync, and provider protocol"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["calendar", "ics", "caldav", "sync"]
categories = ["data-structures"]

[dependencies]
async-trait = "0.1"
chrono = "0.4.42"
chrono-tz = "0.10.4"
dirs = "6.0.0"
educe = { version = "0.6.0", default-features = false, features = ["PartialEq"] }
filetime = "0.2"
home = "0.5.12"
humantime = "2.3.0"
icalendar = "0.17.10"
rrule = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slug = "0.1.6"
tempfile = "3"
thiserror = "2.0.18"
tokio = { version = "1", features = ["process", "io-util", "time", "macros", "rt"] }
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["v4"] }
windows-timezones = { version = "0.5", default-features = false, features = ["std", "chrono-tz"] }

[dev-dependencies]
pretty_assertions = "1"
serial_test = "3"
