[package]
name = "caldir-lib"
version = "0.1.0"
edition = "2024"
description = "Core library for caldir ecosystem - calendar management and sync"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# .ics parsing/generation
icalendar = "0.17"
iso8601 = "0.6"

# Error handling
anyhow = "1"

# Configuration
config = "0.15"

# Filesystem paths
dirs = "6"
shellexpand = "3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Provider discovery (finding binaries in PATH)
which = "8"

# ICS text generation
indoc = "2.0.7"
