[package]
name = "caldir-notify"
version = "0.1.0"
edition = "2024"
description = "Desktop notification service for caldir reminders"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "caldir-notify"
path = "src/main.rs"

[dependencies]
caldir-core = { path = "../caldir-core", version = "0.5.0" }
notify-rust = "4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
