[package]
name = "caldir-provider-google"
version = "0.1.0"
edition = "2024"
description = "Google Calendar provider for caldir-cli"

[[bin]]
name = "caldir-provider-google"
path = "src/main.rs"

[dependencies]
# Shared types
caldir-core = { path = "../caldir-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Google Calendar API client
google-calendar = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Error handling
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Open URLs in browser
open = "5"

# URL encoding
urlencoding = "2"

# URL parsing
url = "2"

# Platform-native config directories
dirs = "6"
