[package]
name = "caldir-provider-google"
version = "0.2.1"
edition = "2024"
description = "Google Calendar provider for caldir-cli"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["calendar", "google", "ics", "sync"]
categories = ["command-line-utilities"]

[[bin]]
name = "caldir-provider-google"
path = "src/main.rs"

[dependencies]
# Shared types
caldir-core = { path = "../caldir-core", version = "0.3.0" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Google Calendar API client
google-calendar = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# HTTP client (for hosted OAuth refresh via caldir.org)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Open URLs in browser
open = "5"

# URL parsing
url = "2"

# Platform-native config directories
dirs = "6"
