[package]
name = "caldir-provider-icloud"
version = "0.2.4"
edition = "2024"
description = "iCloud Calendar provider for caldir-cli"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["calendar", "icloud", "caldav", "sync"]
categories = ["command-line-utilities"]

[[bin]]
name = "caldir-provider-icloud"
path = "src/main.rs"

[dependencies]
# Shared types
caldir-core = { path = "../caldir-core", version = "0.7.0" }

# Generic CalDAV operations
caldir-provider-caldav = { path = "../caldir-provider-caldav", version = "0.1.3" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Error handling
anyhow = "1"

# Platform-native config directories
dirs = "6"
