[package]
name = "caldir-provider-icloud"
version = "0.2.9"
edition = "2024"
description = "iCloud Calendar provider for caldir-cli"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["calendar", "icloud", "caldav", "sync"]
categories = ["command-line-utilities"]

[[bin]]
name = "caldir-provider-icloud"
path = "src/main.rs"

[dependencies]
# Shared types
caldir-core = { path = "../caldir-core", version = "0.10.1" }

# Generic CalDAV operations
caldir-provider-caldav = { path = "../caldir-provider-caldav", version = "0.1.9" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Error handling
anyhow = "1"

[dev-dependencies]
tempfile = "3"

