[package]
name = "caldir-provider-outlook"
version = "0.1.0"
edition = "2024"
description = "Microsoft Outlook Calendar provider for caldir-cli"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["calendar", "outlook", "microsoft", "sync"]
categories = ["command-line-utilities"]

[[bin]]
name = "caldir-provider-outlook"
path = "src/main.rs"

[dependencies]
# Shared types
caldir-core = { path = "../caldir-core", version = "0.4.0" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (Graph API + OAuth)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Error handling
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2"

# Platform-native config directories
dirs = "6"
