[package]
name = "caldir-provider-webcal"
version = "0.1.0"
edition = "2024"
description = "Webcal (ICS subscription) provider for caldir"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "caldir-provider-webcal"
path = "src/main.rs"

[dependencies]
caldir-core = { path = "../caldir-core", version = "0.7.1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9"
url = "2"
